--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -26,27 +26,27 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="javascript:void(0)">
-                        <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
-                        {{'add table' | i18n}}"
-                        <span style="font-size: 75%">{{currentEntity?._id}}</span>
-                        <input style="width: 5em" #tableName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(tableName, '__')" value="__" />
+                        <span (click)="addTable(tableName)">
+                            <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
+                            {{ addTableLabel }}
+                        </span>
+                        <input style="width: 25ch" #tableName type="text" (click)="stopPropagation($event)" placeholder="NewTableName" />
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)">
-                        <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
-                        {{'add column' | i18n}}
-                        <span style="font-size: 75%">{{currentEntity?._id}}</span>
-                        <input style="width: 5em" #columnName type="text" (click)="stopPropagation($event)" (keydown)="keepPrefix(columnName, '.')" value="." />
+                        <span (click)="addColumnToCurrentTable(columnName)">
+                            <fa-icon [icon]="addIcon" class="fa-sm"></fa-icon>
+                            {{ addColumnLabel }}
+                        </span>
+                        <input style="width: 25ch" #columnName type="text" (click)="stopPropagation($event)" placeholder="new_column_name" />
                     </a>
                     <div class="divider"></div>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" (click)="delTable()">
                         <fa-icon [icon]="delIcon" class="fa-sm"></fa-icon>
-                        {{'del table' | i18n}}
-                        <span style="font-size: 75%">{{currentEntity?._id}}</span>
+                        {{'del table' | i18n}} {{currentEntity?._id}}
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" (click)="delColumnFromCurrentTable()">
                         <fa-icon [icon]="delIcon" class="fa-sm"></fa-icon>
-                        {{'del column' | i18n}}
-                        <span style="font-size: 75%">{{currentProperty?.name}}</span>
+                        {{'del column' | i18n}} {{currentProperty?.name}}
                     </a>
                 </div>
             </li>
@@ -82,7 +82,7 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" *ngFor="let theme of themes" href="javascript:void(0)">
                         <img height="150" width="200" [src]="theme.img" (click)="switchTheme(theme.css)" />
-                        <br />{{theme.name}} {{theme.layout | i18n}} {{theme.look | i18n}}
+                        <br />{{theme.name}} / {{theme.layout | i18n}} / {{theme.look | i18n}}
                     </a>
                 </div>
             </li>
