--- a/fe/src/frmdb-editor/icon-editor.component.html
+++ b/fe/src/frmdb-editor/icon-editor.component.html
@@ -18,7 +18,7 @@
                     <div class="tab-pane active" id="Available_Icons" role="tabpanel" aria-labelledby="home-tab">
                         <div class="d-flex flex-column h-100">
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" data-frmdb-value="$FRMDBQ.$Icon[].filter._id.contains"
+                                <input type="text" class="form-control" data-frmdb-filter="$FRMDB.$Icon[].filter._id.contains"
                                     placeholder="Search icons: hotels, water sports, beauty, consulting ...">
                                 <div class="input-group-append">
                                     <span class="input-group-text"><i class="frmdb-i-search"></i></span>
